general optimizations and fixes from intellij code analysis